--- a/views/email.ejs
+++ b/views/email.ejs
@@ -2,7 +2,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-
+<!-- Email Template -->
 <!DOCTYPE html>
 <html>
 
@@ -144,7 +144,7 @@
                         <td bgcolor="#ffffff" align="left"
                             style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">Dear <%= cname %>, <br>
-                                    We hereby Confirm your Booking for <b> Mehta Laser Cutting Machine</b>. <br><br> The
+                                    We hereby Confirm your Booking for <b><%= machine %></b>. <br><br> The
                                     Timings are as Following: <br><br>
                                     <table border="1" width="100%">
                                         <tr align="center">
