--- a/public/css/form.css
+++ b/public/css/form.css
@@ -11,11 +11,14 @@ input {
     box-sizing: border-box;
     padding: 16px;
 }
-
+.warning{
+    color: red;
+}
 .label {
     position: absolute;
     top: 0;
     bottom: 0;
+    margin: 10px;
     left: 16px;
     display: flex;
     align-items: center;
@@ -26,12 +29,14 @@ input,
 .label .text {
     font-family: 'Segoe UI';
     font-size: 16px;
+    
 }
 
 .label .text {
     transition: all 0.15s ease-out;
     color: grey;
 }
+
 
 input:focus {
     outline: none;
@@ -51,6 +56,15 @@ input:focus+.label .text {
     color: blue;
 }
 
+select{
+width: 100%;
+    padding: 15px;
+    /* text-align: center; */
+    outline: none;
+    border-radius: 10px;
+    border: 2px solid #cbcbcb;
+}
+
 body {
     font-family: sans-serif;
 }
@@ -66,6 +80,7 @@ th,
 td {
     text-align: left;
     padding: 8px;
+    min-width: 110px;
 }
 
 
@@ -135,4 +150,38 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+        background: #efedff;
+            padding: 45px;
+            margin: 20px;
+            border: 2px solid #5944ff;
+            border-radius: 20px;
 }
+.txt-center{
+    text-align: center;
+}
+.cta{
+    background-color: #5944ff;
+    color:aliceblue;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 40px;
+}
+
+@media screen and (min-width: 768px){
+.form-container{
+    display: flex;
+    width: 60%;
+        align-items: center;
+        justify-content: center;
+        background: #efedff;
+        padding: 45px;
+        margin: 20px;
+        border: 2px solid #5944ff;
+        border-radius: 20px;
+}
+.align-center{
+    display: flex;
+        justify-content: center;
+}
+}
+
