--- a/views/booking_withoutLogin.ejs
+++ b/views/booking_withoutLogin.ejs
@@ -287,7 +287,7 @@
 <body>
 
     <div id="g_id_onload" data-client_id="924859429110-4seosoqea4p90m82af8vr32jlltua24k.apps.googleusercontent.com"
-        data-context="signin" data-ux_mode="popup" data-login_uri="http://localhost:3000/" data-itp_support="true"
+        data-context="signin" data-ux_mode="popup" data-login_uri="https://rich-cyan-bear-wear.cyclic.app/" data-itp_support="true"
         data-skip_prompt_cookie="session-token">
     </div>
 
