--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div><i class="lni lni-exit"></i>
-                <div onclick="location.href='/logout'">
+                <div onclick="location.href='/admin-logout'">
                     Logout
                 </div>
             </div>
