--- a/public/css/form.css
+++ b/public/css/form.css
@@ -185,3 +185,206 @@ body {
 }
 }
 
+
+/* common.css  */
+html {
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    max-width: 100vw !important;
+    text-align: justify;
+    scroll-behavior: smooth;
+    line-height: 1.8rem;
+    overflow-x: hidden;
+}
+
+body {
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    text-align: justify;
+    line-height: 1.8rem;
+    background-color: #ECF4FF;
+}
+
+body,
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 800;
+}
+
+/*Scrollbar Handle */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #454B69;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3E435E;
+}
+
+/* NavBar */
+.navbar {
+    background-color: #2D2F61 !important;
+}
+
+.navbar-collapse {
+    margin-right: 5%;
+}
+
+.nav-item {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/* Top-Container */
+.heading1 {
+    margin: 4%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #686de0;
+    width: 250px;
+    padding: 1%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+    background-color: #686de0;
+    color: white;
+    font-size: 1.8rem;
+}
+
+/* .heading-otherpages-top {
+  margin-top: 12%;
+} */
+
+@media only screen and (max-width:777px) {
+    .heading {
+        font-size: 1.2rem;
+        margin-top: 10%;
+        width: 200px;
+    }
+
+    /* .heading-otherpages-top {
+    margin-top: 15%;
+  } */
+}
+
+
+.small-space {
+    height: 8vh;
+    /* background-color: #a3ddcb; */
+}
+
+.wave-svg {
+    position: absolute;
+    z-index: -1;
+    display: none;
+}
+
+.egg-shape-2 {
+    background: #00adb5;
+    color: white;
+    width: 120px;
+    height: 80px;
+    line-height: 80px;
+    border-radius: 90% 60% 90% 60%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+
+.egg-shape-1 {
+    background: pink;
+    width: 140px;
+    height: 80px;
+    line-height: 80px;
+    border-radius: 60% 90% 60% 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.egg-shape-blue-2 {
+    background: #a685e2;
+    color: #ECF4FF;
+    width: 200px;
+    height: 80px;
+    line-height: 80px;
+    border-radius: 90% 60% 90% 60%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+
+.egg-shape-blue-1 {
+    background: rgba(163, 221, 203, 0.5);
+    width: 220px;
+    height: 80px;
+    line-height: 80px;
+    border-radius: 60% 90% 60% 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.long-text-1 {
+    width: 200px;
+}
+
+.long-text-2 {
+    width: 180px;
+    font-size: 1.1rem;
+}
+
+/* Footer */
+
+.space {
+    height: 5vw;
+}
+
+.footer {
+    padding: 4%;
+    padding-bottom: 1%;
+    background-color: #686de0;
+    /*#a3ddcb; */
+    color: white;
+}
+
+.footer-icon {
+    font-size: 1.5rem;
+    color: white;
+}
+
+.coordinator-name,
+.coordinator-phone,
+.coordinator-email {
+    margin: 0;
+}
+
+.social-icon,
+.contact-btn {
+    margin: 6%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.contact-btn {
+    border-radius: 20px;
+}
