--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -5,17 +5,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calender</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@event-calendar/build@1.5.0/event-calendar.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/@event-calendar/build@1.5.0/event-calendar.min.js"></script>
     <style>
         body {
             font-family: sans-serif;
         }
+        *, :before, :after {
+            box-sizing: border-box;
+          }
+          
+          * {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto Condensed', 'Sans serif';
+          }
+          
+          div.container {
+            margin: 34px auto;
+            width: 260px;
+            background-color: transparent;
+          }
+          
+          div.dropdown {
+            position: relative;
+          }
+          
+          div.dropdown > div.caption {
+            background-color: #f2f2f2;
+            padding: 11px 24px;
+            border-radius: 3px;
+            cursor: pointer;
+          }
+          
+          div.dropdown > div.list {
+            position: absolute;
+            background-color: #f2f2f2;
+            width: 100%;
+            border-radius: 0 0 3px 3px;
+            display: none;
+          }
+          
+          div.dropdown > div.list > div.item {
+            padding: 11px 24px;
+            cursor: pointer;
+          }
+          
+          div.dropdown > div.list > div.item.selected {
+            font-weight: bold;
+          }
+          
+          div.dropdown > div.caption:hover,
+          div.dropdown > div.list > div.item:hover {
+            background-color: rgb(83, 161, 214);
+            color: #fff;
+          }
+          
+          div.dropdown.open > div.caption {
+            border-radius: 3px 3px 0 0;
+            border-bottom: solid 1px #999;
+          }
+          
+          div.dropdown.open > div.list {
+            display: block;
+          }
     </style>
 </head>
 
 <body>
-    <div id="ec"></div>
+
+     <div id="ec"></div> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
         fetch("/all")
             .then((response) => response.json())
@@ -23,12 +85,14 @@
                 let ec = new EventCalendar(document.getElementById("ec"), {
                     view: "dayGridMonth",
                     events: data,
+                    
                 });
             })
             .catch((error) => {
                 console.error("Error fetching JSON:", error);
             });
     </script>
+    
 </body>
 
 </html>
