--- a/public/css/style.css
+++ b/public/css/style.css
@@ -184,7 +184,7 @@
          outline: none;
          border: 1px solid #0430aa;
          margin: auto;
-         -webkit-appearance: none;
+         /* -webkit-appearance: none; */
 
 
      }
